# sxfs

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  package-lock.json  package.json  tsconfig.json  tslint.json
.github/workflows/: build.yml
cross/: Dockerfile.cross-linux-tsc  Dockerfile.cross-windows-tsc  build.sh
public/: login.js
src/: app.ts  args.rs  auth.rs  config.rs  database.rs  gaurds.rs  generate.rs  id.rs  lib.rs  logger.rs  main.rs  mimemap.json  paths.rs  routes.rs  templates.rs  user.rs
src/guard/: auth.rs  content.rs  mod.rs
src/responder/: dor.rs  mod.rs
src/routes/: auth.rs  catcher.rs  link.rs  mod.rs  upload.rs
src/scripts/: login.ts  manual.ts  uploads.ts
src/static/: files.scss
src/styles/: deleted.scss  error.scss  footer.scss  global.scss  header.scss  index.scss  login.scss  table.scss  uploads.scss
src/styles/include/: mixins.scss
src/templates/: error.rs  mod.rs  page.rs  uploader.rs
src/views/: 404.hbs  500.hbs  files.hbs  upload.hbs
src/views/partials/: header.hbs
src/views/templates/: 401.hbs  404.hbs  index.hbs
templates/: config.toml  shortener.sxcu  uploader.sxcu
templates/pages/: deleted.html  index.html  links.html  login.html  uploads.html
templates/pages/base/: error.html  page.html
templates/pages/errors/: 401.html  404.html  500.html
templates/pages/partials/: footer.html  header.html
views/: index.hbs
