[package]
name = "sxfs"
description = "File server for auto uploads from the ShareX client with a web UI"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
handlebars = "1.1"
serde_json = "1.0"
lazy_static = "1.3"
rust-embed = "4.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
colored = "1.8"
base64 = "0.10"