[package]
publish = false
name = "sxfs"
description = "File server for auto uploads from the ShareX client with a web UI"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/dusterthefirst/sxfs"
readme = "README.md"


[dependencies]
anyhow = "1.0"
askama = { version = "0.9", features = ["with-rocket"] }
base64 = "0.12"
colored = "1.9"
log = "0.4"
rand = "0.7"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["helmet"] }
rust-embed = { version = "5.5", features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.7"
structopt = "0.3"
toml = "0.5"
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }

[lib]
name = "sxfs"
path = "src/lib.rs"